[package]
name = "compio"
version = "0.18.0"
description = "Completion based async runtime"
categories = ["asynchronous", "filesystem", "network-programming"]
keywords = ["async", "fs", "iocp", "io-uring", "net"]
readme = "../README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Shared dependencies for all platforms
[dependencies]
# Workspace dependencies
compio-buf = { workspace = true }
compio-driver = { workspace = true }
compio-runtime = { workspace = true, optional = true }
compio-macros = { workspace = true, optional = true }
compio-fs = { workspace = true, optional = true }
compio-io = { workspace = true, optional = true }
compio-net = { workspace = true, optional = true }
compio-signal = { workspace = true, optional = true }
compio-dispatcher = { workspace = true, optional = true }
compio-log = { workspace = true }
compio-tls = { workspace = true, optional = true }
compio-process = { workspace = true, optional = true }
compio-quic = { workspace = true, optional = true }
compio-ws = { workspace = true, optional = true }

# Shared dev dependencies for all platforms
[dev-dependencies]
compio-buf = { workspace = true, features = ["bumpalo"] }
compio-runtime = { workspace = true, features = ["criterion"] }
compio-macros = { workspace = true }

criterion = { workspace = true, features = ["async_tokio"] }
futures-channel = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt",
] }

[target.'cfg(windows)'.dev-dependencies]
widestring = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }

# Unix specific dev dependencies
[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true, features = ["fs"] }
libc = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dev-dependencies]
monoio = { version = "0.2.2", default-features = false, features = ["iouring"] }

[features]
default = ["runtime", "io-uring"]
io-uring = ["compio-driver/io-uring"]
polling = ["compio-driver/polling"]
io = ["dep:compio-io"]
io-compat = ["io", "compio-io/compat", "compio-quic?/io-compat"]
fs = ["dep:compio-fs", "runtime", "io"]
net = ["dep:compio-net", "runtime", "io"]
runtime = ["dep:compio-runtime"]
macros = ["dep:compio-macros", "runtime"]
event = ["compio-runtime/event", "runtime"]
signal = ["dep:compio-signal", "event"]
time = ["compio-runtime/time", "runtime"]
dispatcher = ["dep:compio-dispatcher", "runtime"]
tls = ["dep:compio-tls"]
native-tls = ["tls", "compio-tls/native-tls", "compio-ws?/native-tls"]
native-tls-vendored = [
    "compio-tls/native-tls-vendored",
    "compio-ws?/native-tls-vendored",
]
rustls = ["tls", "compio-tls/rustls", "compio-ws?/rustls"]
ring = ["tls", "compio-tls/ring", "compio-quic?/ring", "compio-ws?/ring"]
process = ["dep:compio-process"]
quic = ["dep:compio-quic"]
h3 = ["quic", "compio-quic/h3"]
ws = ["dep:compio-ws"]
all = [
    "fs",
    "net",
    "time",
    "macros",
    "signal",
    "dispatcher",
    "native-tls",
    "rustls",
    "process",
    "quic",
    "h3",
    "ws",
]

arrayvec = ["compio-buf/arrayvec"]
bumpalo = ["compio-buf/bumpalo"]
bytes = ["compio-buf/bytes"]
criterion = ["compio-runtime?/criterion"]

sync = ["compio-driver/sync", "compio-quic?/sync", "compio-io?/sync"]

enable_log = ["compio-log/enable_log"]

# Nightly features
allocator_api = ["compio-buf/allocator_api", "compio-io?/allocator_api"]
current_thread_id = ["compio-runtime?/current_thread_id"]
lazy_cell = ["compio-signal?/lazy_cell"]
linux_pidfd = ["compio-process?/linux_pidfd"]
once_cell_try = [
    "compio-driver/once_cell_try",
    "compio-net?/once_cell_try",
    "compio-signal?/once_cell_try",
]
proc_macro_diagnostic = ["compio-driver/proc_macro_diagnostic"]
read_buf = [
    "compio-buf/read_buf",
    "compio-io?/read_buf",
    "compio-tls?/read_buf",
    "compio-fs?/read_buf",
]
try_trait_v2 = ["compio-buf/try_trait_v2"]
windows_by_handle = ["compio-fs?/windows_by_handle"]
future-combinator = ["compio-runtime?/future-combinator"]
nightly = [
    "allocator_api",
    "current_thread_id",
    "lazy_cell",
    "linux_pidfd",
    "once_cell_try",
    "proc_macro_diagnostic",
    "read_buf",
    "try_trait_v2",
    "windows_by_handle",
    "future-combinator",
]

real_blackbox = ["criterion/real_blackbox"]

[[example]]
name = "basic"
required-features = ["macros", "fs"]

[[example]]
name = "named_pipe"
required-features = ["macros"]

[[example]]
name = "net"
required-features = ["macros", "net"]

[[example]]
name = "unix"
required-features = ["macros"]

[[example]]
name = "resolve"
required-features = ["macros"]

[[example]]
name = "tick"
required-features = ["time", "signal", "macros"]

[[example]]
name = "dispatcher"
required-features = ["macros", "dispatcher", "sync"]

[[bench]]
name = "fs"
harness = false
required-features = ["fs"]

[[bench]]
name = "net"
harness = false
required-features = ["net"]

[[test]]
name = "runtime"
required-features = ["fs", "net", "macros"]
